Добавляет страницу портфолио
1. Дублируется header
2.Список с фильтрами
3. Секция с примерами работ + фото
4. Дублируется footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./portfolio.html">Портфолио</a>
           </li>
           <li>
             <a href="">Контакты</a>
@@ -150,7 +150,7 @@
         </ul>
       </section>
     </main>
-    <!--Сontacts-->
+    <!--Footer-Сontacts-->
     <footer>
       <section>
         <h2 hidden>Контакты</h2>
