--- a/index.html
+++ b/index.html
@@ -4,35 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Веб студия</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header-->
-    <header>
-      <nav>
-        <a href="index.html" aria-label="логотип веб студии" lang="en"
-          >WebStudio</a
+    <header class="header">
+      <nav class="navigation">
+        <a
+          class="logo link"
+          href="index.html"
+          aria-label="логотип веб студии"
+          lang="en"
+          ><span class="logo-web">Web</span>Studio</a
         >
-        <ul>
+        <ul class="listnav list">
           <li>
-            <a href="">Студия</a>
+            <a class="header-link" href="">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a class="header-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a class="header-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-contacts link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-contacts link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
+
     <!--Hero-->
     <main>
       <section>
@@ -154,21 +172,32 @@
     <footer>
       <section>
         <h2 hidden>Контакты</h2>
-        <a href="index.html" aria-label="логотип веб студии" lang="en"
-          >WebStudio</a
+        <a
+          class="link footer-logo"
+          href="index.html"
+          aria-label="логотип веб студии"
+          lang="en"
+          ><span class="footerlogo-web">Web</span>Studio</a
         >
         <address>
-          <ul>
+          <ul class="list">
             <li>
-              <a href="https://goo.gl/maps/fiabQLBE6Hv75SHZ6" target="_blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
+              <a
+                class="link footer-links"
+                href="https://goo.gl/maps/fiabQLBE6Hv75SHZ6"
+                target="_blank"
+                ><span class="stereet">г. Киев, пр-т Леси Украинки, 26</span></a
               >
             </li>
             <li>
-              <a href="mailto:info@example.com">info@example.com</a>
+              <a class="link footer-links" href="mailto:info@example.com"
+                >info@example.com</a
+              >
             </li>
             <li>
-              <a href="tel:+380991111111">+38 099 111 11 11</a>
+              <a class="link footer-links" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
             </li>
           </ul>
         </address>
