--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
     <!--Hero-->
     <main>
-      <section>
+      <section class="hero-title">
         <h1>Эффективные решения<br />для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button class="btn" type="button">Заказать услугу</button>
       </section>
       <!--Advantages-->
       <section>
