Добавляет все оформление на главную
1.Преимущества
2.О нас
3.Наша команда

--- a/index.html
+++ b/index.html
@@ -60,31 +60,31 @@
       <!--Advantages-->
       <section>
         <h2 hidden>Преимущества</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="power-title">Внимание к деталям</h3>
+            <p class="power-subtitle">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="power-title">Пунктуальность</h3>
+            <p class="power-subtitle">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="power-title">Планирование</h3>
+            <p class="power-subtitle">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="power-title">Современные технологии</h3>
+            <p class="power-subtitle">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -93,8 +93,9 @@
       </section>
       <!--About us-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="what-we-do">Чем мы занимаемся</h2>
+        <!--Our team photos-->
+        <ul class="list">
           <li>
             <img
               src="./images/our-work/box1.jpg"
@@ -123,8 +124,8 @@
       </section>
       <section>
         <!--Our team-->
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="our-team">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/our-team/teamcard1.jpg"
@@ -132,18 +133,18 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="name">Игорь Демьяненко</h3>
+            <p class="position" lang="en">Product Designer</p>
           </li>
           <li>
             <img
               src="./images/our-team/teamcard2.jpg"
-              alt="ajnj Ольги Репиной"
+              alt="Ольги Репиной"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="name">Ольга Репина</h3>
+            <p class="position" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -152,8 +153,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="name">Николай Тарасов</h3>
+            <p class="position" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -162,8 +163,8 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="name">Михаил Ермаков</h3>
+            <p class="position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
