--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         >
         <ul class="listnav list">
           <li>
-            <a class="header-link" href="">Студия</a>
+            <a class="header-link link" href="">Студия</a>
           </li>
           <li>
-            <a class="header-link" href="./portfolio.html">Портфолио</a>
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a class="header-link" href="">Контакты</a>
+            <a class="header-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -184,19 +184,19 @@
           <ul class="list">
             <li>
               <a
-                class="link footer-links"
+                class="link street"
                 href="https://goo.gl/maps/fiabQLBE6Hv75SHZ6"
                 target="_blank"
                 ><span class="stereet">г. Киев, пр-т Леси Украинки, 26</span></a
               >
             </li>
             <li>
-              <a class="link footer-links" href="mailto:info@example.com"
+              <a class="footer-links link" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
             <li>
-              <a class="link footer-links" href="tel:+380991111111"
+              <a class="footer-links link" href="tel:+380991111111"
                 >+38 099 111 11 11</a
               >
             </li>
