Добавляет оформление main страницы с портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/portfolio.css" />
   </head>
   <body>
     <!--Header-->
@@ -60,16 +61,16 @@
             <a class="link filter" href="">Все</a>
           </li>
           <li>
-            <a class="link" href="">Веб-сайты</a>
+            <a class="link filter" href="">Веб-сайты</a>
           </li>
           <li>
-            <a class="link" href="">Приложения</a>
+            <a class="link filter" href="">Приложения</a>
           </li>
           <li>
-            <a class="link" href="">Дизайн</a>
+            <a class="link filter" href="">Дизайн</a>
           </li>
           <li>
-            <a class="link" href="">Маркетинг</a>
+            <a class="link filter" href="">Маркетинг</a>
           </li>
         </ul>
       </section>
@@ -84,8 +85,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="project-name">Технокряк</h2>
+              <p class="project-type">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -96,10 +97,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p>Дизайн</p>
+              <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+              <p class="project-type">Дизайн</p>
             </a>
           </li>
           <li>
@@ -110,8 +109,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="project-name">Ресторан Seafood</h2>
+              <p class="project-type">Приложение</p>
             </a>
           </li>
           <li>
@@ -122,8 +121,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="project-name">Проект Prime</h2>
+              <p class="project-type">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -134,8 +133,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="project-name">Проект Boxes</h2>
+              <p class="project-type">Приложение</p>
             </a>
           </li>
           <li>
@@ -146,10 +145,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle" lang="en">
-                Inspiration has no Borders
-              </h2>
-              <p>Веб-сайт</p>
+              <h2 class="project-name" lang="en">Inspiration has no Borders</h2>
+              <p class="project-type">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -160,8 +157,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="project-name">Издание Limited Edition</h2>
+              <p class="project-type">Дизайн</p>
             </a>
           </li>
           <li>
@@ -172,8 +169,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle">Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="project-name">Проект LAB</h2>
+              <p class="project-type">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -184,8 +181,8 @@
                 width="370"
                 height="294"
               />
-              <h2 class="portfolio-subtitle" lang="en">Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="project-name" lang="en">Growing Business</h2>
+              <p class="project-type">Приложение</p>
             </a>
           </li>
         </ul>
